--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ POSTGRES_USER=ledger
 POSTGRES_PASSWORD=ledger
 POSTGRES_DB=payments_ledger
 POSTGRES_PORT=5432
+
+# Worker Pool
+WORKER_POOL_SIZE=10
+WORKER_QUEUE_SIZE=100
